--- a/index.html
+++ b/index.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Landing Page</title>
-    <link rel="stylesheet" href="./styles.css" type="text/css"/>
+    <link rel="stylesheet" href="./styles.css" type="text/css" />
 </head>
+
 <body>
     <section class="header-section">
-        <div class="header-container">
-            <header>Product</header>
-            <div class="nav-container">
-                <nav>
-                    <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                    </ul>
-                </nav>
-            </div>
+        <div class="flex">
+            <h1>Product</h1>
+          <div class="nav-container">
+        <nav>
+            <ul>
+            <li><a href="#About">About</a></li>
+            <li><a href="#Features">Features</a></li>
+            <li><a href="#Sign_Up">Sign Up</a></li>
+            </ul>
+        </nav>
+          </div>
         </div>
-    </section>
-    
+   </section>
 </body>
+
 </html>
