Added structure and styles to about section

--- a/index.html
+++ b/index.html
@@ -12,18 +12,32 @@
 <body>
     <section class="header-section">
         <div class="flex">
-            <h1>Product</h1>
+            <h1>Odin Watch</h1>
           <div class="nav-container">
         <nav>
             <ul>
             <li><a href="#About">About</a></li>
             <li><a href="#Features">Features</a></li>
-            <li><a href="#Sign_Up">Sign Up</a></li>
+            <li><a href="#Sign_Up">Prices</a></li>
             </ul>
         </nav>
           </div>
         </div>
    </section>
+
+   <section id="About">
+     <div class="about-container">
+        <div class="text-content">
+         <h3>The Best Watch on the Market</h3>
+         <p>Revolutionary watch created from the hearts of millions of our customers. We have developed this product for years to ensure that all of our loving customers are completely satisfied with it. Wearing this watch around your wrist will give you a complete advantage against others through its complete awesomeness</p>
+        </div>
+        <div class="image-content">
+            <img src="/home/kali/Downloads/pexels-antony-trivet-9897910.jpg" alt="image of watch"/>
+        </div>
+     </div>
+   </section>
+
+   
 </body>
 
 </html>
