added structure for features section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,16 @@
      </div>
    </section>
 
-   
+   <section id="Features">
+    <div class="features-container">
+        <div class="feature"></div>
+        <div class="image"></div>
+        <div class="feature"></div>
+        <div class="image"></div>
+    </div>
+   </section>
+
+
 </body>
 
 </html>
