added id for image and p element

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
      <div class="about-container">
         <div class="text-content">
          <h3>The Best Watch on the Market</h3>
-         <p>Revolutionary watch created from the hearts of millions of our customers. We have developed this product for years to ensure that all of our loving customers are completely satisfied with it. Wearing this watch around your wrist will give you a complete advantage against others through its complete awesomeness</p>
+         <p id="about-p">Revolutionary watch created from the hearts of millions of our customers. We have developed this product for years to ensure that all of our loving customers are completely satisfied with it. Wearing this watch around your wrist will give you a complete advantage against others through its complete awesomeness</p>
         </div>
         <div class="image-content">
-            <img src="/home/kali/Downloads/pexels-antony-trivet-9897910.jpg" alt="image of watch"/>
+            <img id="about-img" src="/home/kali/Downloads/pexels-antony-trivet-9897910.jpg" alt="image of watch"/>
         </div>
      </div>
    </section>
