added styles to features section

--- a/index.html
+++ b/index.html
@@ -32,17 +32,24 @@
          <p id="about-p">Revolutionary watch created from the hearts of millions of our customers. We have developed this product for years to ensure that all of our loving customers are completely satisfied with it. Wearing this watch around your wrist will give you a complete advantage against others through its complete awesomeness</p>
         </div>
         <div class="image-content">
-            <img id="about-img" src="/home/kali/Downloads/pexels-antony-trivet-9897910.jpg" alt="image of watch"/>
+            <img class="image" src="/home/kali/Downloads/pexels-antony-trivet-9897910.jpg" alt="image of watch"/>
         </div>
      </div>
    </section>
 
    <section id="Features">
+    <div class="h2-container"><h2>Some of Our Features</h2></div>
     <div class="features-container">
-        <div class="feature"></div>
-        <div class="image"></div>
-        <div class="feature"></div>
-        <div class="image"></div>
+        
+        <div class="feature"><h3>Unbelieveable Design</h3>
+            <p>Quality design using titanium and ceramic, aswell as a pvd coating which allows the watch to maintain its quality for a lifetime.</p>
+        </div>
+        <div class="image-container"><img class="image-2" src="/home/kali/Downloads/pexels-pixabay-221028.jpg" alt="image of watch mechanics"/> </div>
+        <div class="feature">
+            <h3>Trusted Brand</h3>
+            <p>We have been building watches for centuries, our reputation proceeds us as one of the greatest watch manufacturors ever. By buying one of our watches you are not only buying a fantastic product but also you will join our family of millions. Don't wait, Join Us! </p>
+        </div>
+        <div class="image-container"><img class="image-2" src="/home/kali/Downloads/pexels-pixabay-416339.jpg" alt="image of watch"/> </div>
     </div>
    </section>
 
