added structure to quote section

--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@
     </div>
    </section>
 
+   <section class="quote-section">
+    <h3>A statement of praise from one of our customers</h3>
+    <div class="quote-container">
+    <q>Ever since I bought this watch I have recieved countless compliments. Walking down the street wearing an Odin Watch is a feeling like no other. I cannot reccomend buying this watch enough.</q>
+    </div>
+   </section>
+
 
 </body>
 
