removed h2, added quote

--- a/index.html
+++ b/index.html
@@ -38,27 +38,26 @@
    </section>
 
    <section id="Features">
-    <div class="h2-container"><h2>Some of Our Features</h2></div>
     <div class="features-container">
         
         <div class="feature"><h3>Unbelieveable Design</h3>
-            <p>Quality design using titanium and ceramic, aswell as a pvd coating which allows the watch to maintain its quality for a lifetime.</p>
+            <p class="feature-p">Quality design using titanium and ceramic, aswell as a pvd coating which allows the watch to maintain its quality for a lifetime.</p>
         </div>
         <div class="image-container"><img class="image-2" src="/home/kali/Downloads/pexels-pixabay-221028.jpg" alt="image of watch mechanics"/> </div>
         <div class="feature">
             <h3>Trusted Brand</h3>
-            <p>We have been building watches for centuries, our reputation proceeds us as one of the greatest watch manufacturors ever. By buying one of our watches you are not only buying a fantastic product but also you will join our family of millions. Don't wait, Join Us! </p>
+            <p class="feature-p">We have been building watches for centuries, our reputation proceeds us as one of the greatest watch manufacturors ever. By buying one of our watches you are not only buying a fantastic product but also you will join our family of millions. Don't wait, Join Us! </p>
         </div>
         <div class="image-container"><img class="image-2" src="/home/kali/Downloads/pexels-pixabay-416339.jpg" alt="image of watch"/> </div>
+        
     </div>
    </section>
-
-   <section class="quote-section">
-    <h3>A statement of praise from one of our customers</h3>
-    <div class="quote-container">
+   <div class="quote-container">
     <q>Ever since I bought this watch I have recieved countless compliments. Walking down the street wearing an Odin Watch is a feeling like no other. I cannot reccomend buying this watch enough.</q>
     </div>
-   </section>
+   
+
+   
 
 
 </body>
