--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
    <div class="quote-container">
     <q>Ever since I bought this watch I have recieved countless compliments. Walking down the street wearing an Odin Watch is a feeling like no other. I cannot reccomend buying this watch enough.</q>
     </div>
+    <section id="Prices">
+        <div class="box1"></div>
+        <div class="box2"></div>
+        <div class="box3"></div>
+    </section>
    
 
    
