added footer and changed some colors on prices

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul>
             <li><a href="#About">About</a></li>
             <li><a href="#Features">Features</a></li>
-            <li><a href="#Sign_Up">Prices</a></li>
+            <li><a href="#Prices">Prices</a></li>
             </ul>
         </nav>
           </div>
@@ -48,15 +48,17 @@
             <h3>Trusted Brand</h3>
             <p class="feature-p">We have been building watches for centuries, our reputation proceeds us as one of the greatest watch manufacturors ever. By buying one of our watches you are not only buying a fantastic product but also you will join our family of millions. Don't wait, Join Us! </p>
         </div>
-        <div class="image-container"><img class="image-2" src="/home/kali/Downloads/pexels-pixabay-416339.jpg" alt="image of watch"/> </div>
-        
-    </div>
-   </section>
+        <div class="image-container"><img class="image-2" src="/home/kali/Downloads/pexels-pixabay-416339.jpg" alt="image of watch"/> 
+        </div>
+        </div>
+   
+</section>
    <section class="quote-section">
    <div class="quote-container">
     <q>Ever since I bought this watch I have recieved countless compliments. Walking down the street wearing an Odin Watch is a feeling like no other. I cannot reccomend buying this watch enough.</q>
     </div>
     </section>
+    
     <section id="Prices">
         <div class="box-container">
         <div class="box1">
@@ -77,11 +79,11 @@
         </div>
         </div>
     </section>
-   
-
-   
-
-
-</body>
+     <div class="footer">
+      <footer>
+        <p>*This is not a real landing page*</p>
+      </footer>
+    </div>
+   </body>
 
 </html>
